[package]
name = "iat"
version = "0.1.1"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://atomgit.com/i18n/i18n.git"
homepage = "https://atomgit.com/i18n/i18n/tree/dev/lib/iat"
description = "iat"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.38"
syn = { version = "2.0.98", features = ["full"] }
